# awaitwhat

./: .gitignore  .pre-commit-config.yaml  build.md  build.py  license.txt  pyproject.toml  readme.md  setup.py  test.py  what.c
.github/workflows/: build-linux.yml
awaitwhat/: .clang-format  __init__.py  blocker.py  dot.py  gather.py  graph.py  helpers.py  node.py  sleep.py  stack.py  utils.py  wait.py  wait_for.py  what.c
examples/: test_future.py  test_same_future.py  test_shield.py  test_signal.py  test_stack.py  test_wait_for.py
test/: test.py  test_future.py  test_same_future.py  test_scenario.py  test_sleep.py
tests/: test_dot.py  test_gather.py  test_sleep.py  test_wait.py
